DFR-464: Fortify setup